--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>My GitHub Projects</h1>
+        <h1>Amie's Projects :)</h1>
         
         <!-- Project 1 - Crime Mystery Board -->
         <div class="project">
