--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <!-- Project 1 - Crime Mystery Board -->
         <div class="project">
-            <h2>Project Name</h2>
+            <h2>Mystery Crime Board</h2>
             <p>Add photos and make your connections.</p>
             <p>
                 <a href="https://superisotopes.github.io/Crime-Mystery-Board" target="_blank">Live Demo</a> | 
